<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!--    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/gray_wall_concrete_background" />-->


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/numEnterTextView"
        style="@style/TextViewBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:ems="10"
        android:fontFamily="serif"
        android:gravity="bottom|end"
        android:hint="@string/start_hint_0"
        android:paddingStart="@dimen/text_view_padding"
        android:paddingEnd="@dimen/text_view_padding"
        android:textAlignment="gravity"
        android:textSize="@dimen/num_enter_text_view_text_size" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/resultTextView"
        style="@style/TextViewBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:ems="10"
        android:fontFamily="serif"
        android:gravity="bottom|end"
        android:paddingStart="@dimen/text_view_padding"
        android:paddingEnd="@dimen/text_view_padding"
        android:textAlignment="gravity"
        android:textSize="@dimen/result_text_view_text_size" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_clear"
                style="@style/CalculatorButtonsMainStyle"
                android:text="@string/button_clear"
                android:textColor="@color/red" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_delete"
                style="@style/CalculatorButtonsMainStyle"
                android:text="@string/button_delete"
                android:textColor="@color/orange" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_percentage"
                style="@style/CalculatorButtonsMainStyle"
                android:text="@string/button_percentage"
                android:textColor="@color/green" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_division"
                style="@style/CalculatorButtonsMainStyle"
                android:text="@string/button_division"
                android:textColor="@color/green" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button7"
                style="@style/CalculatorButtonsMainStyle"
                android:text="@string/button_7" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button8"
                style="@style/CalculatorButtonsMainStyle"
                android:text="@string/button_8" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button9"
                style="@style/CalculatorButtonsMainStyle"
                android:text="@string/button_9" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_multiplication"
                style="@style/CalculatorButtonsMainStyle"
                android:text="@string/button_multiplication"
                android:textColor="@color/green" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button4"
                style="@style/CalculatorButtonsMainStyle"
                android:text="@string/button_4" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button5"
                style="@style/CalculatorButtonsMainStyle"
                android:text="@string/button_5" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button6"
                style="@style/CalculatorButtonsMainStyle"
                android:text="@string/button_6" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_subtraction"
                style="@style/CalculatorButtonsMainStyle"
                android:text="@string/button_subtraction"
                android:textColor="@color/green" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button1"
                style="@style/CalculatorButtonsMainStyle"
                android:text="@string/button_1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button2"
                style="@style/CalculatorButtonsMainStyle"
                android:text="@string/button_2" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button3"
                style="@style/CalculatorButtonsMainStyle"
                android:text="@string/button_3" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_addition"
                style="@style/CalculatorButtonsMainStyle"
                android:text="@string/button_sum"
                android:textColor="@color/green" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_positive_or_negative"
                style="@style/CalculatorButtonsMainStyle"
                android:text="@string/button_positive_or_negative" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button0"
                style="@style/CalculatorButtonsMainStyle"
                android:text="@string/button_0" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_period"
                style="@style/CalculatorButtonsMainStyle"
                android:text="@string/button_period" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_equals"
                style="@style/CalculatorButtonsMainStyle"
                android:backgroundTint="@color/green"
                android:text="@string/button_result"
                android:textColor="@color/white" />

        </TableRow>

    </TableLayout>


</LinearLayout>